tests/reference/asr-test_str_slicing3-fe6a03c.stderr
semantic error: slice indices must be integers or None
 --> tests/errors/test_str_slicing3.py:4:17
  |
4 |     print(s[1:3:0.5])
  |                 ^^^ 
